--- a/src/app/pages/prenatal/mothers-pregnancy-record/mothers-pregnancy-record.component.html
+++ b/src/app/pages/prenatal/mothers-pregnancy-record/mothers-pregnancy-record.component.html
@@ -218,4 +218,9 @@
       &times;
     </button>
   </div>
+  <app-spinnner
+[navigating]="navigating"
+[spinnerMessage]="spinnerMessage">
+
+</app-spinnner>
 </div>
