--- a/src/app/pages/prenatal/mothers-pregnancy-record/mothers-pregnancy-record.component.html
+++ b/src/app/pages/prenatal/mothers-pregnancy-record/mothers-pregnancy-record.component.html
@@ -38,10 +38,7 @@
 <!-- FORM SECTION -->
 
   <div *ngIf="!showSubmittedRecords" class="h-full p-4 bg-slate-50 rounded-xl">
-    <!-- Success Message -->
-    <div *ngIf="successMessage" class="p-4 mb-4 text-white bg-green-500 border border-green-300 rounded-xl shadow-sm flex items-center gap-2" role="alert">
-      <span class="font-semibold">Success!</span> {{ successMessage }}
-    </div>
+
 
     <!-- Error Message -->
     <div *ngIf="error" class="p-4 mb-4 text-red-800 bg-red-50 border border-red-300 rounded-xl shadow-sm flex items-center gap-2" role="alert">
@@ -59,10 +56,12 @@
             [formControlName]="col.key"
             [placeholder]="col.placeholder"
             [id]="col.key"
+            [readonly]="col.readonly"
             class="px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:outline-none transition"
           />
         </div>
       </div>
+
 
       <!-- Submit Button -->
       <div class="flex justify-center">
@@ -94,7 +93,10 @@
 <div *ngIf="loading" class="text-center text-blue-600 font-medium mb-4">
   Fetching patient prenatal records...
 </div>
-
+    <!-- Success Message -->
+    <div *ngIf="successMessage" class="p-4 mb-4 text-white bg-green-500 border border-green-300 rounded-xl shadow-sm flex items-center gap-2" role="alert">
+      <span class="font-semibold">Success!</span> {{ successMessage }}
+    </div>
 <!-- No Records Found -->
 <div *ngIf="noRecordsFound && !loading" class="text-center text-red-500 font-semibold mb-4">
   No prenatal records found.
