--- a/src/app/shared/left-side-panel/left-side-panel.component.html
+++ b/src/app/shared/left-side-panel/left-side-panel.component.html
@@ -1,7 +1,8 @@
 <!-- Logo + Navigation: Hidden (w-0 h-0) on mobile, visible on md and up -->
 <div
   class="flex flex-col items-center mb-6 space-y-2 fixed top-4 left-4 z-[9999] pointer-events-auto
-         w-0 h-0 overflow-hidden md:w-auto md:h-auto"
+         w-0 h-0 overflow-hidden md:w-auto md:h-auto rounded-lg"
+
 >
   <!-- Logo -->
   <img
@@ -56,8 +57,8 @@
 
 <!-- Sidebar Panel -->
 <div
-  class="z-50 bg-slate-50 shadow-lg transform transition-transform duration-300 ease-in-out
-         fixed top-0 left-0 h-screen w-64 p-6
+  class="z-50 bg-slate-200 shadow-lg transform transition-transform duration-300 ease-in-out
+         fixed top-0 left-0 h-screen w-64 p-6 rounded-lg
          md:sticky md:top-0 md:h-screen md:w-64 md:block md:translate-x-0 md:shadow-none"
   [ngClass]="{
     '-translate-x-full': !mobileMenuOpen,
