--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,11 +1,10 @@
 <div class="min-h-screen w-full flex flex-col bg-slate-200 text-gray-800"
 >
   <!-- Layout Grid -->
-  <div class="flex flex-1 overflow-hidden bg-slate-200 bg-cover bg-opacity-65"
+  <div class="flex flex-1 overflow-hidden bg-slate-200 bg-cover bg-opacity-100"
   style="background-image: url('assets/images/yep.jpg');">
-
     <!-- Left Side Panel -->
-     <div class="flex min-h-screen bg-white">
+     <div class="flex min-h-screen bg-slate-200 rounded-lg">
       <app-left-side-panel></app-left-side-panel>
 
      </div>
@@ -18,7 +17,7 @@
         <router-outlet></router-outlet>
       </div>
     </main>
-
+ 
     <!-- Right Side Panel -->
       <app-right-side-panel></app-right-side-panel>
 
