--- a/src/app/shared/left-side-panel/left-side-panel.component.html
+++ b/src/app/shared/left-side-panel/left-side-panel.component.html
@@ -22,7 +22,7 @@
       class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition shadow">
       Prenatal
     </button>
-    <button routerLink="/HCP/child-immunization" routerLinkActive="active"
+    <button routerLink="/HCP/immunization" routerLinkActive="active"
       class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition shadow">
       Immunization
     </button>
@@ -84,7 +84,7 @@
   Prenatal
 </button>
 
-<button routerLink="/HCP/child-immunization"
+<button routerLink="/HCP/immunization"
   class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition shadow">
   Immunization
 </button>
